tests/ui/nll/issue-47388.rs
struct FancyNum {
    num: u8,
}

fn main() {
    let mut fancy = FancyNum{ num: 5 };
    let fancy_ref = &(&mut fancy);
    fancy_ref.num = 6; //~ ERROR E0594
    println!("{}", fancy_ref.num);
}
